Fix collapsed icons (#1831)

--- a/src/extension/ynab-toolkit.css
+++ b/src/extension/ynab-toolkit.css
@@ -56,3 +56,8 @@
   float: right;
   display: flex;
 }
+
+.tk-navlink i {
+  margin-right: 10px;
+  padding-left: 20px;
+}
